--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,12 +30,12 @@
                         </li>
                     @if (User.Identity.IsAuthenticated)
                     {
-                        <li class="nav-item">
-                            <p>Welcome back: @User.Identity.Name</p>
+                         <li class="nav-item">
+                             <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Profile</a>
                         </li>
                         <li class="nav-item">
                             <form method="post" asp-controller="Account" asp-action="Logout">
-                                <input type="submit" value="Logga ut" />
+                                <input class="nav-link text-dark"  type="submit" value="Sign out" />
                             </form>
                          </li>
                     }
